# ros-central-registry

./: .bazelignore  .gitignore  README.md
modules/gtsam/: metadata.json
modules/gtsam/4.2.0/: MODULE.bazel  source.json
modules/gtsam/4.2.0/overlay/: BUILD.bazel
ros/: BUILD.bazel  README.md  bazel_from_ros.py  parse_cmake_project.py  parse_ros_workspace.py
ros/bazel_ros/: parse_cmake_project.py  parse_ros_project.py  parse_setup_project.py  spec.py
tools/: requirements.in  requirements_lock.txt
workspace_bazel/: .gitignore
